--- a/templates/news.html
+++ b/templates/news.html
@@ -2,6 +2,7 @@
 {% extends 'flatpages/default.html' %}
 
 {% load custom_filters %}
+{% load custom_tags %}
 
 {% block title %}
 News
@@ -9,11 +10,19 @@ News
 
 
 {% block content %}
-   <h1>Все новости</h1>
-   <hr>
+    <h1>Все новости</h1>
+    <hr>
 
-   {% if news %}
-   <table>
+    <form action="" method="get">
+        <h2>Поиск</h2>
+        {{ filterset.form.as_p }}
+        <input type="submit" value="Найти" />
+    </form>
+    <hr>
+
+    {% if news %}
+    <h2>Список статей и новостей</h2>
+    <table>
     <tr>
         <td><b>Тема</b></td>
         <td><b>Дата публикации</b></td>
@@ -32,6 +41,29 @@ News
 
     {% else %}
     <h2>Новостей нет!</h2>
+    {% endif %}
+
+    {# Добавляем пагинацию на страницу #}
+
+    {# Информация о предыдущих страницах #}
+    {% if page_obj.has_previous %}
+        <a href="?{% url_replace page=1 %}">1</a>
+        {% if page_obj.previous_page_number != 1 %}
+            ...
+            <a href="?{% url_replace page=page_obj.previous_page_number %}">{{ page_obj.previous_page_number }}</a>
+        {% endif %}
+    {% endif %}
+
+    {# Информация о текущей странице #}
+    {{ page_obj.number }}
+
+    {# Информация о следующих страницах #}
+    {% if page_obj.has_next %}
+        <a href="?{% url_replace page=page_obj.next_page_number %}">{{ page_obj.next_page_number }}</a>
+        {% if paginator.num_pages != page_obj.next_page_number %}
+            ...
+            <a href="?{% url_replace page=page_obj.paginator.num_pages %}">{{ page_obj.paginator.num_pages }}</a>
+        {% endif %}
     {% endif %}
 
 {% endblock content %}
