--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -29,9 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/news/">News</a>
                         </li>
-                        <!-- <li class="nav-item">
-                            <a class="nav-link" href="/contacts/">Contact</a>
-                        </li> -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="/profile/">Profile</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -39,6 +39,9 @@
         <!-- Page content-->
         <div class="container">
             <div class="row">
+                <div>
+                    <h1><a href="/">Simple SignUp/SignIn app</a></h1>
+                </div>
                 <div class="col-lg-12 text-center">
                     {% block content %}
                     <h1>{{ flatpage.content }}</h1>
