--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -12,30 +12,36 @@
     </head>
     <body>
         <!-- Responsive navbar-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
-            <div class="container">
-                <a class="navbar-brand" href="#">SkillFactory NewsBoard</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                        data-target="#navbarResponsive"
-                        aria-controls="navbarResponsive" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="/main/">Main</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/news/">News</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/profile/">Profile</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-         </nav>
+        {% load cache%}
+            {% cache 100 nav%}
+                <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
+                    <div class="container">
+                        <a class="navbar-brand" href="#">SkillFactory NewsBoard</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                                data-target="#navbarResponsive"
+                                aria-controls="navbarResponsive" aria-expanded="false"
+                                aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarResponsive">
+                            <ul class="navbar-nav ml-auto">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="/main/">Main</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/news/">News</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/profile/">Profile</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="/category/">Category</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    </nav>
+            {% endcache%}
         <!-- Page content-->
         <div class="container">
             <div class="row">
